update information for zilinghan

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -14,10 +14,10 @@
   name: Zilinghan Li
   position: Computer Scientist
   research_interests: Federated learning, privacy-preserving machine learning, distributed systems, APPFL framework
-  image: /assets/img/members/zilinghan_li.jpg
-  email: zilinghan@anl.gov
-  google_scholar: ""
-  website: ""
+  image: /assets/img/members/zilinghan_li.png
+  email: zilinghan.li@anl.gov
+  google_scholar: "https://scholar.google.com/citations?user=4JbL29YAAAAJ&hl=en&oi=ao"
+  website: "https://zilinghan.github.io"
   bio: "Specialist in federated learning and privacy-preserving AI for biomedical applications."
 
 - id: tarak_nandi
