Add Mitch Conery to Postdoctoral Researchers list

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -212,6 +212,7 @@
   contents:
     - title: Postdoctoral Researchers
       items:
+        - Mitch Conery
         - Wei Tan
         - Bo Liu
         - Ketan Maheshwari
